--- a/Assignment 1/index.html
+++ b/Assignment 1/index.html
@@ -13,4 +13,17 @@
           <a href ="">Home</a>
           <div class="coloureditLine">
             <span></span> <span></span>
+            </div>
+            </section>
+            <section class="subMenu">
+              <p>First Link</p>
+              <p>Second Link</p>
+              <p>Third Link</p>
+              <p> Fourth Link</p>
+              </section>
+            <section class="menuItem">
+              <a href="">Shop</a>
+              <div class="coloureditLine">
+                <span></span> <span></span>
+
       </nav>
