--- a/Assignment 1/index.html
+++ b/Assignment 1/index.html
@@ -20,10 +20,22 @@
               <p>Second Link</p>
               <p>Third Link</p>
               <p> Fourth Link</p>
-              </section>
             <section class="menuItem">
               <a href="">Shop</a>
               <div class="coloureditLine">
                 <span></span> <span></span>
-
+                </div>
+                </section>
+                </section>
       </nav>
+      <section id="cart">
+        <a href="">Cart(0)</a>
+        <div id="menu"></div>
+        </section>
+        </header>
+
+        <section id="banner">
+          <h1>HANDCRAFTED JUST FOR YOU</h1>
+          <p>Welcome to Krafti, a jaunty little theme we made specifically for your new arts & crafts or handcraft website! We made sure Krafti's got absolutely everything covered.</p>
+          <a href="">View More</a>
+          </section>
