--- a/Assignment 1/index.html
+++ b/Assignment 1/index.html
@@ -39,3 +39,24 @@
           <p>Welcome to Krafti, a jaunty little theme we made specifically for your new arts & crafts or handcraft website! We made sure Krafti's got absolutely everything covered.</p>
           <a href="">View More</a>
           </section>
+
+          <section id="aboutContainer">
+            <section id="about">
+              <div>
+                <img src="svgs/leaf.svg" alt="Leaf Icon">
+                <h2>WITH HOME IN MIND</h2>
+                <p>        <p>Lorem ipsum dolor sit amet a con sectet adipisicing elit se do eiuso temp or incidi unt en labore et dolore magna aliqua ut enim minim veniam quis nost exercitation sen sene ullamco aboris nisi ut</p>
+      </div>
+      <div id="aboutSubSections">
+        <div>
+          <h4>NEW IDEAS</h4>
+          <p> Lorem ipsum dolor sit amet a con sectet adipisicing elit se do eiuso tempor incidid unt ut labore et dolore</p>
+          <a class="animating Link" href="">
+            <div>
+              <span></span>
+              <span></span>
+              <span></span>
+            </div> View More
+          </a>
+        </div>
+        <div>
