--- a/Assignment 1/index.html
+++ b/Assignment 1/index.html
@@ -60,3 +60,56 @@
           </a>
         </div>
         <div>
+
+          <h4>NEW IDEAS</h4>
+          <p>           <p>Lorem ipsum dolor sit amet a con sectet adipisicing elit se do eiuso tempor incidid unt ut labore et dolore</p>
+          <a class="animating Link" href="">
+            <div>
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>View More
+          </a>
+        </div>
+      </div>
+    </section>
+    <section id="collage">
+      <div id="singleCollage">
+        <span>
+          <h6> Organic Raw</h6>
+          <p> Handmade</p>
+        </span>
+      </div>
+      <div id="smallerCollage">
+        <div>
+          <span>
+            <h6> Organic Raw</h6>
+            <p> Handmade</p>
+          </span>
+        </div>
+        <div>
+          <span>
+            <h6> Organic Raw</h6>
+            <p> Handmade</p>
+          </span>
+        </div>
+        <div>
+          <span>
+            <h6> Organic Raw</h6>
+            <p> Handmade</p>
+          </span>
+        </div>
+        <div>
+          <span>
+            <h6> Organic Raw</h6>
+            <p> Handmade</p>
+          </span>
+          </div>
+          </div>
+          </section>
+          </section>
+
+          <section id="testimonials">
+            <img src="svgs/leaf2.svg" alt="Leaf Icon">
+            <h2>They said about us</h2>
+            <p>Diutris
