--- a/Assignment 1/index.html
+++ b/Assignment 1/index.html
@@ -112,4 +112,160 @@
           <section id="testimonials">
             <img src="svgs/leaf2.svg" alt="Leaf Icon">
             <h2>They said about us</h2>
-            <p>Diutris
+            <p>Diutris nisi ut aliquip excom modo conses. Dolor ipsum dolor sit alor,
+              consectetur adipisicing elit, sed do frescon tempor dunt ut te
+              dolore magna aliqua ut enim minim delian quis nostrud exercitation ullamco.
+              Duis aute irure dolor in repre henderit in voluptate enim miin roreni congi.
+            </p>
+    <div id="profile">
+    <img src="images/testimonials_user.png" alt="Customer Image" height="80px" />
+    <h4>HIN LING</h4>
+    <p>Designer</p>
+    </div>
+    </section>
+
+
+  <section id=" imageGallery">
+    <div>
+    <span> SHOP ORGANIC</span>
+    </div>
+    <div>
+    <span> SHOP POTTERY</span>
+    </div>
+    <div>
+    <span> SHOP INTERIOR</span>
+    </div>
+  </section>
+
+
+  <section id=" products">
+    <div class=" topBorder"></div>
+    <div class=" rightBorder"></div>
+    <div class=" bottomBorder"></div>
+    <div class=" leftBorder"></div>
+    <img src=" svgs/leaf3.svg" alt=" Leaf Icon">
+    <h2> Most Popular Products</h2>
+    <p> Bestselling in december</p>
+    <section id=" productsDisplay">
+      <div>
+        <img src=" images/product1.jpeg" alt="Product 1">
+        <h4> Wind Chimes</h4>
+        <p> Home Decor</p>
+        <span> $44.99</span>
+      </div>
+      <div>
+        <img src=" images/product2.jpeg" alt="Product 2">
+        <h4> Dark Chocolate</h4>
+        <p> Organic Food</p>
+        <span> $17.99</span>
+      </div>
+      <div>
+        <img src=" images/product3.jpeg" alt="Product 3">
+        <h4> Organic Cookies</h4>
+        <p> Organic Food</p>
+        <span> $5.99</span>
+      </div>
+      <div>
+        <img src=" images/product4.jpeg" alt="Product 4">
+        <h4> Camomile Soap</h4>
+        <p> Homemade Cosmetics</p>
+        <span> $5.99</span>
+      </div>
+    </section>
+  </section>
+
+  <section id=" ourIdentity">
+    <div id=" ourIdentityImage"></div>
+    <div id=" ourIdentityPoints">
+      <div>
+        <img src=" svgs/identity1.svg" alt="Icon">
+        <h2> New Ideas</h2>
+        <p> Lorem ipsum dolor sit amet a con sectet adipisicing elit se do eiuso tempor
+          incidid unt ut labore et.
+        </p>
+      </div>
+      <div>
+      <img src=" svgs/identity2.svg" alt="Icon">
+      <h2> Passion Driven</h2>
+      <p> Lorem ipsum dolor sit amet a con sectet adipisicing
+        elit se do eiuso tempor incidid unt ut labore et.
+      </p>
+      </div>
+      <div>
+        <img src="svgs/identity3.svg" alt="Icon">
+        <h2>Organic</h2>
+        <p>Lorem ipsum dolor sit amet a con sectet adipisicing elit se
+          do eiuso tempor incidid unt ut labore et.
+        </p>
+        </div>
+        <div>
+        <img src="svgs/identity4.svg" alt="Icon">
+        <h2>Vivid Colors</h2>
+        <p>Lorem ipsum dolor sit amet a con sectet adipisicing elit se do eiuso tempor incidid
+          unt ut labore et.
+        </p>
+        </div>
+        </div>
+        </section>
+
+
+  <section id=" peopleBehind">
+    <img src=" svgs/leaf4.svg" alt="Leaf Icon">
+    <h2> THE PEOPLE BEHIND THE SCENE
+    </h2>
+    <p> Only the best professionals
+    </p>
+    <section id=" peopleBehindList">
+      <div>
+        <img src=" images/profile_pic1.jpeg" alt="Profile Picture">
+        <h4> Janet Conn</h4>
+        <p> Painter
+        </p>
+      </div>
+      <div>
+        <img src=" images/profile_pic2.jpeg" alt="Profile Picture">
+        <h4> HANNAH JUDI</h4>
+        <p> Blogger
+        </p>
+      </div>
+      <div>
+        <img src=" images/profile_pic3.jpeg" alt=" Profile Picture">
+        <h4> MIKE THOMSEN</h4>
+        <p> Agent</p>
+      </div>
+      </section>
+      </section>
+
+
+  <footer>
+  <section id=" logoFooter">
+  <img src=" images/main-logo.png" alt=" Krafti Logo" height=" 25" />
+  <p>Your new handmade and artisan site has already been created.
+  </p>
+  </section>
+  <section>
+  <h5> About Us</h5>
+      <p> About Me</p>
+      <p> Our Services</p>
+      <p> Our Team</p>
+      <p> Contact Us</p>
+    </section>
+    <section>
+      <h5> Help</h5>
+      <p> About Us</p>
+      <p> Get In Touch</p>
+      <p> Discounts</p>
+      <p> Returns</p>
+    </section>
+    <section>
+      <h5> Instagram</h5>
+      <div>
+        <img src="images/footer1.jpeg" alt="Insta" height="65px">
+        <img src="images/footer2.jpeg" alt="Insta" height="65px">
+        <img src="images/footer3.jpeg" alt="Insta" height="65px">
+        <img src="images/footer4.jpeg" alt="Insta" height="65px">
+      </div>
+      </section>
+      </footer>
+</body>
+</html>
