--- a/Assignment 1/index.html
+++ b/Assignment 1/index.html
@@ -127,28 +127,28 @@
 
   <section id=" imageGallery">
     <div>
-    <span> SHOP ORGANIC</span>
+    <span>SHOP ORGANIC</span>
     </div>
     <div>
-    <span> SHOP POTTERY</span>
+    <span>SHOP POTTERY</span>
     </div>
     <div>
-    <span> SHOP INTERIOR</span>
+    <span>SHOP INTERIOR</span>
     </div>
   </section>
 
 
-  <section id=" products">
-    <div class=" topBorder"></div>
-    <div class=" rightBorder"></div>
-    <div class=" bottomBorder"></div>
-    <div class=" leftBorder"></div>
-    <img src=" svgs/leaf3.svg" alt=" Leaf Icon">
+  <section id="products">
+    <div class="topBorder"></div>
+    <div class="rightBorder"></div>
+    <div class="bottomBorder"></div>
+    <div class="leftBorder"></div>
+    <img src="svgs/leaf3.svg" alt=" Leaf Icon">
     <h2> Most Popular Products</h2>
     <p> Bestselling in december</p>
-    <section id=" productsDisplay">
+    <section id="productsDisplay">
       <div>
-        <img src=" images/product1.jpeg" alt="Product 1">
+        <img src="images/product1.jpeg" alt="Product 1">
         <h4> Wind Chimes</h4>
         <p> Home Decor</p>
         <span> $44.99</span>
@@ -180,33 +180,27 @@
       <div>
         <img src=" svgs/identity1.svg" alt="Icon">
         <h2> New Ideas</h2>
-        <p> Lorem ipsum dolor sit amet a con sectet adipisicing elit se do eiuso tempor
-          incidid unt ut labore et.
+        <p> Lorem ipsum dolor sit amet a con sectet adipisicing elit se do eiuso tempor incidid unt ut labore et.
         </p>
       </div>
       <div>
       <img src=" svgs/identity2.svg" alt="Icon">
       <h2> Passion Driven</h2>
-      <p> Lorem ipsum dolor sit amet a con sectet adipisicing
-        elit se do eiuso tempor incidid unt ut labore et.
+      <p> Lorem ipsum dolor sit amet a con sectet adipisicing elit se do eiuso tempor incidid unt ut labore et.
       </p>
       </div>
       <div>
         <img src="svgs/identity3.svg" alt="Icon">
         <h2>Organic</h2>
-        <p>Lorem ipsum dolor sit amet a con sectet adipisicing elit se
-          do eiuso tempor incidid unt ut labore et.
+        <p>Lorem ipsum dolor sit amet a con sectet
+          adipisicing elit se do eiuso tempor incidid unt ut labore et.
         </p>
         </div>
         <div>
         <img src="svgs/identity4.svg" alt="Icon">
         <h2>Vivid Colors</h2>
         <p>Lorem ipsum dolor sit amet a con sectet adipisicing elit se do eiuso tempor incidid
-          unt ut labore et.
-        </p>
-        </div>
-        </div>
-        </section>
+          unt ut labore et. </p></div></div></section>
 
 
   <section id=" peopleBehind">
@@ -223,19 +217,15 @@
         </p>
       </div>
       <div>
-        <img src=" images/profile_pic2.jpeg" alt="Profile Picture">
-        <h4> HANNAH JUDI</h4>
-        <p> Blogger
-        </p>
+      <img src=" images/profile_pic2.jpeg" alt="Profile Picture">
+      <h4>HANNAH JUDI</h4>
+      <p> Blogger </p>
       </div>
       <div>
         <img src=" images/profile_pic3.jpeg" alt=" Profile Picture">
         <h4> MIKE THOMSEN</h4>
-        <p> Agent</p>
-      </div>
-      </section>
-      </section>
-
+        <p> Agent</p> </div>
+      </section> </section>
 
   <footer>
   <section id=" logoFooter">
@@ -244,20 +234,23 @@
   </p>
   </section>
   <section>
-  <h5> About Us</h5>
-      <p> About Me</p>
-      <p> Our Services</p>
-      <p> Our Team</p>
-      <p> Contact Us</p>
+
+  <h5>About Us</h5>
+      <p>About Me</p>
+      <p>Our Services</p>
+      <p>Our Team</p>
+      <p> ontact Us</p>
+
     </section>
     <section>
-      <h5> Help</h5>
-      <p> About Us</p>
-      <p> Get In Touch</p>
-      <p> Discounts</p>
-      <p> Returns</p>
+      <h5>Help</h5>
+      <p>About Us</p>
+      <p>Get In Touch</p>
+      <p>Discounts</p>
+      <p>Returns</p>
     </section>
     <section>
+
       <h5> Instagram</h5>
       <div>
         <img src="images/footer1.jpeg" alt="Insta" height="65px">
