--- a/Assignment 1/index.html
+++ b/Assignment 1/index.html
@@ -19,7 +19,7 @@
               <p>First Link</p>
               <p>Second Link</p>
               <p>Third Link</p>
-              <p> Fourth Link</p>
+              <p>Fourth Link</p>
             <section class="menuItem">
               <a href="">Shop</a>
               <div class="coloureditLine">
@@ -29,7 +29,7 @@
                 </section>
       </nav>
       <section id="cart">
-        <a href="">Cart(0)</a>
+        <a href=""> Cart(0)</a>
         <div id="menu"></div>
         </section>
         </header>
@@ -62,7 +62,7 @@
         <div>
 
           <h4>NEW IDEAS</h4>
-          <p>           <p>Lorem ipsum dolor sit amet a con sectet adipisicing elit se do eiuso tempor incidid unt ut labore et dolore</p>
+          <p>Lorem ipsum dolor sit amet a con sectet adipisicing elit se do eiuso tempor incidid unt ut labore et dolore</p>
           <a class="animating Link" href="">
             <div>
               <span></span>
@@ -76,33 +76,33 @@
     <section id="collage">
       <div id="singleCollage">
         <span>
-          <h6> Organic Raw</h6>
-          <p> Handmade</p>
+          <h6>Organic Raw</h6>
+          <p>Handmade</p>
         </span>
       </div>
       <div id="smallerCollage">
         <div>
           <span>
-            <h6> Organic Raw</h6>
-            <p> Handmade</p>
+            <h6>Organic Raw</h6>
+            <p>Handmade</p>
           </span>
         </div>
         <div>
           <span>
-            <h6> Organic Raw</h6>
-            <p> Handmade</p>
+            <h6>Organic Raw</h6>
+            <p>Handmade</p>
           </span>
         </div>
         <div>
           <span>
-            <h6> Organic Raw</h6>
-            <p> Handmade</p>
+            <h6>Organic Raw</h6>
+            <p>Handmade</p>
           </span>
         </div>
         <div>
           <span>
-            <h6> Organic Raw</h6>
-            <p> Handmade</p>
+            <h6>Organic Raw</h6>
+            <p>Handmade</p>
           </span>
           </div>
           </div>
@@ -125,7 +125,7 @@
     </section>
 
 
-  <section id=" imageGallery">
+  <section id="imageGallery">
     <div>
     <span>SHOP ORGANIC</span>
     </div>
@@ -144,54 +144,54 @@
     <div class="bottomBorder"></div>
     <div class="leftBorder"></div>
     <img src="svgs/leaf3.svg" alt=" Leaf Icon">
-    <h2> Most Popular Products</h2>
-    <p> Bestselling in december</p>
+    <h2>Most Popular Products</h2>
+    <p>Bestselling in december</p>
     <section id="productsDisplay">
       <div>
         <img src="images/product1.jpeg" alt="Product 1">
-        <h4> Wind Chimes</h4>
-        <p> Home Decor</p>
+        <h4>Wind Chimes</h4>
+        <p>Home Decor</p>
         <span> $44.99</span>
       </div>
       <div>
-        <img src=" images/product2.jpeg" alt="Product 2">
-        <h4> Dark Chocolate</h4>
-        <p> Organic Food</p>
-        <span> $17.99</span>
+        <img src="images/product2.jpeg" alt="Product 2">
+        <h4>Dark Chocolate</h4>
+        <p>Organic Food</p>
+        <span>$17.99</span>
       </div>
       <div>
-        <img src=" images/product3.jpeg" alt="Product 3">
-        <h4> Organic Cookies</h4>
-        <p> Organic Food</p>
-        <span> $5.99</span>
+        <img src="images/product3.jpeg" alt="Product 3">
+        <h4>Organic Cookies </h4>
+        <p>Organic Food </p>
+        <span>$5.99 </span>
       </div>
       <div>
-        <img src=" images/product4.jpeg" alt="Product 4">
-        <h4> Camomile Soap</h4>
-        <p> Homemade Cosmetics</p>
-        <span> $5.99</span>
+        <img src="images/product4.jpeg" alt="Product 4">
+        <h4>Camomile Soap</h4>
+        <p>Homemade Cosmetics</p>
+        <span>$5.99</span>
       </div>
     </section>
   </section>
 
-  <section id=" ourIdentity">
-    <div id=" ourIdentityImage"></div>
-    <div id=" ourIdentityPoints">
+  <section id="ourIdentity">
+    <div id="ourIdentityImage"></div>
+    <div id="ourIdentityPoints">
       <div>
-        <img src=" svgs/identity1.svg" alt="Icon">
-        <h2> New Ideas</h2>
-        <p> Lorem ipsum dolor sit amet a con sectet adipisicing elit se do eiuso tempor incidid unt ut labore et.
+        <img src="svgs/identity1.svg" alt="Icon">
+        <h2>New Ideas</h2>
+        <p>Lorem ipsum dolor sit amet a con sectet adipisicing elit se do eiuso tempor incidid unt ut labore et.
         </p>
       </div>
       <div>
-      <img src=" svgs/identity2.svg" alt="Icon">
-      <h2> Passion Driven</h2>
-      <p> Lorem ipsum dolor sit amet a con sectet adipisicing elit se do eiuso tempor incidid unt ut labore et.
+      <img src="svgs/identity2.svg" alt="Icon">
+      <h2>Passion Driven</h2>
+      <p>Lorem ipsum dolor sit amet a con sectet adipisicing elit se do eiuso tempor incidid unt ut labore et.
       </p>
       </div>
       <div>
         <img src="svgs/identity3.svg" alt="Icon">
-        <h2>Organic</h2>
+        <h2>Organic </h2>
         <p>Lorem ipsum dolor sit amet a con sectet
           adipisicing elit se do eiuso tempor incidid unt ut labore et.
         </p>
@@ -200,38 +200,34 @@
         <img src="svgs/identity4.svg" alt="Icon">
         <h2>Vivid Colors</h2>
         <p>Lorem ipsum dolor sit amet a con sectet adipisicing elit se do eiuso tempor incidid
-          unt ut labore et. </p></div></div></section>
+          unt ut labore et.</p> </div> </div> </section>
 
 
-  <section id=" peopleBehind">
-    <img src=" svgs/leaf4.svg" alt="Leaf Icon">
-    <h2> THE PEOPLE BEHIND THE SCENE
-    </h2>
-    <p> Only the best professionals
-    </p>
-    <section id=" peopleBehindList">
+  <section id="peopleBehind">
+    <img src="svgs/leaf4.svg" alt="Leaf Icon">
+    <h2>THE PEOPLE BEHIND THE SCENE</h2>
+    <p>Only the best professionals</p>
+    <section id="peopleBehindList">
       <div>
-        <img src=" images/profile_pic1.jpeg" alt="Profile Picture">
-        <h4> Janet Conn</h4>
-        <p> Painter
-        </p>
+        <img src="images/profile_pic1.jpeg" alt="Profile Picture">
+        <h4>Janet Conn</h4>
+        <p>Painter</p>
       </div>
       <div>
-      <img src=" images/profile_pic2.jpeg" alt="Profile Picture">
+      <img src="images/profile_pic2.jpeg" alt="Profile Picture">
       <h4>HANNAH JUDI</h4>
-      <p> Blogger </p>
+      <p>Blogger</p>
       </div>
       <div>
-        <img src=" images/profile_pic3.jpeg" alt=" Profile Picture">
-        <h4> MIKE THOMSEN</h4>
-        <p> Agent</p> </div>
+        <img src="images/profile_pic3.jpeg" alt=" Profile Picture">
+        <h4>MIKE THOMSEN</h4>
+        <p>Agent</p> </div>
       </section> </section>
 
   <footer>
-  <section id=" logoFooter">
-  <img src=" images/main-logo.png" alt=" Krafti Logo" height=" 25" />
-  <p>Your new handmade and artisan site has already been created.
-  </p>
+  <section id="logoFooter">
+  <img src="images/main-logo.png" alt=" Krafti Logo" height=" 25" />
+  <p>Your new handmade and artisan site has already been created.</p>
   </section>
   <section>
 
@@ -239,7 +235,7 @@
       <p>About Me</p>
       <p>Our Services</p>
       <p>Our Team</p>
-      <p> ontact Us</p>
+      <p>Contact Us</p>
 
     </section>
     <section>
@@ -250,8 +246,7 @@
       <p>Returns</p>
     </section>
     <section>
-
-      <h5> Instagram</h5>
+<h5>Instagram</h5>
       <div>
         <img src="images/footer1.jpeg" alt="Insta" height="65px">
         <img src="images/footer2.jpeg" alt="Insta" height="65px">
