--- a/Assignment 1/index.html
+++ b/Assignment 1/index.html
@@ -6,31 +6,49 @@
   <link rel="stylesheet" href="reset.css">
   </head>
   <body>
-    <header>
-      <img src="images/main-logo.png" alt="Krafti Logo" heaight="25>"
-      <nav>
-        <section class="menuItem active">
-          <a href ="">Home</a>
-          <div class="coloureditLine">
-            <span></span> <span></span>
-            </div>
-            </section>
-            <section class="subMenu">
-              <p>First Link</p>
-              <p>Second Link</p>
-              <p>Third Link</p>
-              <p>Fourth Link</p>
-            <section class="menuItem">
-              <a href="">Shop</a>
-              <div class="coloureditLine">
-                <span></span> <span></span>
-                </div>
-                </section>
-                </section>
+  <header>
+  <img src="images/main-logo.png" alt="Krafti Logo" height="25">
+  <nav>
+    <section class="menuItem active">
+      <a href="">Home</a>
+      <div class="colouredLine">
+        <span></span><span></span>
+      </div>
+    </section>
+    <section class="menuItem">
+      <a href="">Pages</a>
+      <div class="colouredLine">
+        <span></span><span></span>
+      </div>
+    </section>
+    <section class="menuItem">
+      <a href="">Portfolio</a>
+      <div class="colouredLine">
+        <span></span><span></span>
+      </div>
+    </section>
+    <section class="menuItem dropdown">
+      <a href="">Blog</a>
+      <div class="colouredLine">
+        <span></span><span></span>
+      </div>
+      <section class="subMenu">
+        <p>First Link</p>
+        <p>Second Link</p>
+        <p>Thrid Link</p>
+        <p>Fourth Link</p>
+      </section>
+    </section>
+    <section class="menuItem">
+      <a href="">Shop</a>
+      <div class="colouredLine">
+        <span></span><span></span>
+      </div>
+    </section>
       </nav>
       <section id="cart">
         <a href=""> Cart(0)</a>
-        <div id="menu"></div>
+        <div id="menu"> </div>
         </section>
         </header>
 
@@ -45,7 +63,8 @@
               <div>
                 <img src="svgs/leaf.svg" alt="Leaf Icon">
                 <h2>WITH HOME IN MIND</h2>
-                <p>        <p>Lorem ipsum dolor sit amet a con sectet adipisicing elit se do eiuso temp or incidi unt en labore et dolore magna aliqua ut enim minim veniam quis nost exercitation sen sene ullamco aboris nisi ut</p>
+                <p>
+                <p>Lorem ipsum dolor sit amet a con sectet adipisicing elit se do eiuso temp or incidi unt en labore et dolore magna aliqua ut enim minim veniam quis nost exercitation sen sene ullamco aboris nisi ut</p>
       </div>
       <div id="aboutSubSections">
         <div>
@@ -68,7 +87,7 @@
               <span></span>
               <span></span>
               <span></span>
-            </div>View More
+            </div> View More
           </a>
         </div>
       </div>
@@ -219,24 +238,22 @@
       <p>Blogger</p>
       </div>
       <div>
-        <img src="images/profile_pic3.jpeg" alt=" Profile Picture">
+        <img src="images/profile_pic3.jpeg" alt="Profile Picture">
         <h4>MIKE THOMSEN</h4>
         <p>Agent</p> </div>
-      </section> </section>
-
+      </section>
+    </section>
   <footer>
   <section id="logoFooter">
-  <img src="images/main-logo.png" alt=" Krafti Logo" height=" 25" />
+  <img src="images/main-logo.png" alt="Krafti Logo" height="25" />
   <p>Your new handmade and artisan site has already been created.</p>
   </section>
   <section>
-
   <h5>About Us</h5>
       <p>About Me</p>
       <p>Our Services</p>
       <p>Our Team</p>
       <p>Contact Us</p>
-
     </section>
     <section>
       <h5>Help</h5>
